Add CI check for copyright headers
Signed-off-by: Juan Pablo Samper <jp.samper@apex.ai>

--- a/.github/workflows/colcon.yml
+++ b/.github/workflows/colcon.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Check copyrights
+        run: |
+          source /opt/ros/foxy/setup.bash
+          cd $GITHUB_WORKSPACE
+          ament_copyright --exclude LICENSE CONTRIBUTING.md
+
       - name: Build & Test
         run: |
           cd $GITHUB_WORKSPACE
