--- a/iceoryx_posh/CMakeLists.txt
+++ b/iceoryx_posh/CMakeLists.txt
@@ -76,6 +76,7 @@ add_library(iceoryx_posh
     source/mepoo/segment_manager.cpp
     source/mepoo/mepoo_segment.cpp
     source/mepoo/memory_info.cpp
+    source/popo/callback_delegator.cpp
     source/popo/delivery_fifo.cpp
     source/popo/receiver_port.cpp
     source/popo/receiver_port_data.cpp
