--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,7 +24,7 @@ jobs:
          run: |
           sudo apt-get update
           sudo apt-get install -y libacl1-dev libncurses5-dev doxygen graphviz texlive-font-utils
-          sudo apt-get install -y plantuml texlive-latex-base texlive-latex-recommended texlive-fonts-recommended
+          sudo apt-get install -y plantuml texlive-latex-base texlive-latex-extra texlive-latex-recommended texlive-fonts-recommended
 
        - name: Checkout
          uses: actions/checkout@v2
