iox-#498 more compiler versions in CI
Signed-off-by: Dietrich Krönke <dietrich.kroenke@apex.ai>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: compiler versions
+      - name: compiler version
         run: |
           echo $(clang --version)
 
@@ -110,7 +110,7 @@ jobs:
       
       - name: compiler version
         run: |
-          cl
+          cl.exe /?
 
       - name: Build sources
         run: |
