--- a/.github/workflows/colcon.yml
+++ b/.github/workflows/colcon.yml
@@ -23,6 +23,11 @@ jobs:
           os: [ubuntu-20.04]
 
     steps:
+       - name: compiler versions
+         run: |
+          echo $(gcc --version)
+          echo $(clang --version)
+
       - name: Setup ROS
         uses: ros-tooling/setup-ros@0.0.26
         with:
