--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -110,6 +110,8 @@ jobs:
       
       - name: compiler version
         run: |
+          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC"
+          vcvarsall amd64
           cl.exe /?
 
       - name: Build sources
