iox-#378 integrationtest with colcon test
Signed-off-by: Dietrich Krönke <dietrich.kroenke@apex.ai>

--- a/iceoryx_integration_test/CMakeLists.txt
+++ b/iceoryx_integration_test/CMakeLists.txt
@@ -1,16 +1,16 @@
 # Copyright 2020 Apex.AI, Inc.
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
+# Licensed under the Apache License, Version 2.0 (the "License"); you may not
+# use this file except in compliance with the License. You may obtain a copy of
+# the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+# http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations under
+# the License.
 
 cmake_minimum_required(VERSION 3.5)
 project(iceoryx_integration_test)
@@ -21,12 +21,8 @@ find_package(iceoryx_posh REQUIRED)
 find_package(iceoryx_utils REQUIRED)
 find_package(cpptoml REQUIRED)
 
-
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(launch_testing_ament_cmake)
-
-add_launch_test(test/simple_roudi_test.py)
 
 add_executable(integrationtest src/integrationtest.cpp)
 target_include_directories(
@@ -54,18 +50,18 @@ target_include_directories(
           $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/dependencies/install/include>
           $<INSTALL_INTERFACE:include/${PREFIX}>)
 
-# We need to install it in lib folder because ros2 search in this folder for executables
-install(TARGETS integrationtest iox-roudi DESTINATION lib/${PROJECT_NAME})
+install(TARGETS integrationtest iox-roudi
+        RUNTIME DESTINATION lib/${PROJECT_NAME})
+install(FILES launch/simple_roudi_test.py DESTINATION share/${PROJECT_NAME})
 
-# Install launch files.
-install(DIRECTORY
-  launch
-  DESTINATION share/${PROJECT_NAME}/
-)
+# # Install launch files.
+install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}/)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
+  find_package(ros_testing)
+  add_ros_test(launch/simple_roudi_test.py)
 endif()
 
 ament_package()
