--- a/iceoryx_systemtest/package.xml
+++ b/iceoryx_systemtest/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>iceoryx_integration_test</name>
+  <name>iceoryx_systemtest</name>
   <version>0.1.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="dietrich.kroenke@apex.ai">dietrich.kroenke</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Iceoryx systemtest</description>
+  <maintainer email="dietrich.kroenke@apex.ai">Dietrich Krönke</maintainer>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
@@ -14,8 +14,6 @@
   <build_depend>iceoryx_introspection</build_depend>
   <build_depend>ros_testing</build_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
   <test_depend>ros_testing</test_depend>
 
   <export>
