iox-#378 adapt workflow
Signed-off-by: Dietrich Krönke <dietrich.kroenke@apex.ai>

--- a/.github/workflows/systemtest.yml
+++ b/.github/workflows/systemtest.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Colcon build
+name: Iceoryx Systemtests
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -45,7 +45,18 @@ jobs:
           cd $GITHUB_WORKSPACE
           ament_copyright --exclude LICENSE CONTRIBUTING.md
 
-      - name: Build & Test
+      - name: Build
         run: |
           cd $GITHUB_WORKSPACE
           colcon build
+
+      - name: Test Execution
+        run: |
+          cd $GITHUB_WORKSPACE
+          colcon test --return-code-on-test-failure
+          testpassed=$?
+          if [ $retVal -ne 0 ]; then
+            echo "Systemtest failed! See log output below:"
+            colcon test-result --all --verbose
+          fi
+
