iox-#378 add sourcing ROS for colcon build
Signed-off-by: Dietrich Krönke <dietrich.kroenke@apex.ai>

--- a/.github/workflows/systemtest.yml
+++ b/.github/workflows/systemtest.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Build
         run: |
+          source /opt/ros/foxy/setup.bash
           cd $GITHUB_WORKSPACE
           colcon build
 
