iox-#378 add sourcing ROS for colcon test
Signed-off-by: Dietrich Krönke <dietrich.kroenke@apex.ai>

--- a/.github/workflows/systemtest.yml
+++ b/.github/workflows/systemtest.yml
@@ -53,6 +53,7 @@ jobs:
 
       - name: Test Execution
         run: |
+          source /opt/ros/foxy/setup.bash
           cd $GITHUB_WORKSPACE
           colcon test --return-code-on-test-failure
           testpassed=$?
