iox-#521 use env for ncurses on caching

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -73,7 +73,7 @@ jobs:
         id: cache-ncurses
         with:
           path: "${{env.NCURSES_HOME}}"
-          key: ${{secrets.NCURSES_VERSION}}
+          key: "${{env.NCURSES_VERSION}}"
 
       - name: Build and install ncurses
         env:
