iox-#33 rework posix test
Signed-off-by: Dietrich Kroenke <dietrich.kroenke@apex.ai>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -103,4 +103,4 @@ jobs:
 
       - name: Build sources
         run: |
-          cmake -Bbuild -Hiceoryx_meta -DBUILD_TEST=ON -DINTROSPECTION=OFF -DBINDING_C=ON -DEXAMPLES=ON -DCMAKE_CXX_FLAGS="/MP" && cmake --build build
+          cmake -Bbuild -Hiceoryx_meta -DBUILD_TEST=ON -DINTROSPECTION=OFF -DBINDING_C=ON -DEXAMPLES=ON && cmake --build build
