--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -38,7 +38,7 @@ jobs:
             mkdir -p "${PWD}/artifacts"
 
           dockerRunArgs: |
-            --volume "${PWD}/artifacts:/artifacts"
+            --volume "$GITHUB_WORKSPACE:/artifacts"
 
           env: | # YAML, but pipe character is necessary
             artifact_name: git-${{ matrix.distro }}_${{ matrix.arch }}
@@ -55,11 +55,11 @@ jobs:
 
           # Produce a binary artifact and place it in the mounted volume
           run: |
-            cp $(which git) "/artifacts/${artifact_name}"
-            echo "Produced artifact at /artifacts/${artifact_name}"
+            cd /artifacts
+            tools/iceoryx_build_test.sh
 
-      - name: Show the artifact
-        # Items placed in /artifacts in the container will be in
-        # ${PWD}/artifacts on the host.
-        run: |
-          ls -al "${PWD}/artifacts"
+      # - name: Show the artifact
+      #   # Items placed in /artifacts in the container will be in
+      #   # ${PWD}/artifacts on the host.
+      #   run: |
+      #     ls -al "${PWD}/artifacts"
