iox-#495 update cmake installation
Signed-off-by: Dietrich Krönke <dietrich.kroenke@apex.ai>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,8 +27,7 @@ jobs:
          # https://github.com/actions/virtual-environments/blob/master/images/linux/Ubuntu1804-README.md
          run: |
           sudo apt-get update
-          sudo apt-get install -y libacl1-dev libncurses5-dev doxygen graphviz texlive-font-utils
-          sudo apt-get install -y plantuml texlive-latex-base texlive-latex-extra texlive-latex-recommended texlive-fonts-recommended
+          sudo apt-get install -y libacl1-dev libncurses5-dev
 
        - name: Checkout
          uses: actions/checkout@v2
