--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -11,12 +11,47 @@ on:
     branches: [ master ]
 
 jobs:
-  build_job:
-    # The host should always be linux
+  build_job_latest_clang_gcc:
+    runs-on: ubuntu-latest
+    name: Build on latest clang release
+
+    steps:
+      - name: Install iceoryx dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libacl1-dev libncurses5-dev
+
+      - name: Install latest clang stable release
+        shell: bash
+        run: |
+          REPO_NAME="deb http://apt.llvm.org/focal/ llvm-toolchain-focal main"
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo add-apt-repository "${REPO_NAME}"
+          sudo apt-get update
+          sudo apt-get install -y clang
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build sources
+        shell: bash
+        env:
+          CC:   clang
+          CXX:  clang++
+        run: |
+          echo $(clang --version)
+          sudo $GITHUB_WORKSPACE/tools/add_test_users.sh
+          $GITHUB_WORKSPACE/tools/iceoryx_build_test.sh build-strict build-all out-of-tree build-shared test-add-user
+
+      - name: Run all tests
+        run: |
+          cd $GITHUB_WORKSPACE/build
+          tools/run_tests.sh all
+
+  build_job_gcc54_aarch64:
     runs-on: ubuntu-latest
     name: Build on ${{ matrix.distro }} ${{ matrix.arch }}
 
-    # Run steps on a matrix of 3 arch/distro combinations
     strategy:
       matrix:
         include:
@@ -49,17 +84,19 @@ jobs:
             case "${{ matrix.distro }}" in
               ubuntu*|jessie|stretch|buster)
                 apt-get update -q -y
-                apt-get install -q -y git gcc g++ cmake libacl1-dev libncurses5-dev
+                apt-get install -q -y git gcc g++ libacl1-dev libncurses5-dev wget make maven openjdk-11-jdk-headless
                 ;;
             esac
 
-          # Produce a binary artifact and place it in the mounted volume
           run: |
+            wget https://github.com/Kitware/CMake/releases/download/v3.20.0-rc3/cmake-3.20.0-rc3-linux-aarch64.sh \
+            -q -O /tmp/cmake-install.sh
+            chmod u+x /tmp/cmake-install.sh
+            mkdir /usr/bin/cmake
+            /tmp/cmake-install.sh --skip-license --prefix=/usr/bin/cmake
+            rm /tmp/cmake-install.sh
             cd /artifacts
-            tools/iceoryx_build_test.sh
-
-      # - name: Show the artifact
-      #   # Items placed in /artifacts in the container will be in
-      #   # ${PWD}/artifacts on the host.
-      #   run: |
-      #     ls -al "${PWD}/artifacts"
+            export PATH="/usr/bin/cmake/bin:${PATH}"
+            tools/iceoryx_build_test.sh build-strict build-all out-of-tree build-shared test-add-user
+            cd build
+            tools/run_tests.sh all
