--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -60,7 +60,7 @@ jobs:
             wget https://github.com/Kitware/CMake/releases/download/v3.20.0-rc3/cmake-3.20.0-rc3-linux-aarch64.sh
             mkdir /opt/cmake
             sh cmake-3.20.0-rc3-linux-aarch64.sh --prefix=/opt/cmake --skip-license
-            ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake
+            ln -s /opt/cmake/bin/cmake /usr/bin/cmake
             cd /artifacts
             tools/iceoryx_build_test.sh
 
