--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -62,6 +62,7 @@ jobs:
             sh cmake-3.20.0-rc3-linux-aarch64.sh --prefix=/opt/cmake --skip-license
             ln -s /opt/cmake/bin/cmake /usr/bin/cmake
             cd /artifacts
+            echo $PATH
             tools/iceoryx_build_test.sh
 
       # - name: Show the artifact
