--- a/iceoryx_posh/CMakeLists.txt
+++ b/iceoryx_posh/CMakeLists.txt
@@ -224,6 +224,7 @@ add_library(iceoryx_posh_roudi
     source/roudi/roudi.cpp
     source/roudi/roudi_lock.cpp
     source/roudi/roudi_process.cpp
+    #source/roudi/process_manager.cpp
     source/roudi/service_registry.cpp
     source/roudi/iceoryx_roudi_components.cpp
     source/roudi/roudi_cmd_line_parser.cpp
