iox-#404 Remove the left-overs in the moved files process.hpp and process_manager.hpp
Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

--- a/iceoryx_posh/CMakeLists.txt
+++ b/iceoryx_posh/CMakeLists.txt
@@ -223,8 +223,8 @@ add_library(iceoryx_posh_roudi
     source/roudi/port_pool.cpp
     source/roudi/roudi.cpp
     source/roudi/roudi_lock.cpp
-    source/roudi/roudi_process.cpp
-    #source/roudi/process_manager.cpp
+    source/roudi/process.cpp
+    source/roudi/process_manager.cpp
     source/roudi/service_registry.cpp
     source/roudi/iceoryx_roudi_components.cpp
     source/roudi/roudi_cmd_line_parser.cpp
