--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -55,12 +55,12 @@ jobs:
 
           # Produce a binary artifact and place it in the mounted volume
           run: |
-            mkdir ~/temp
-            cd ~/temp
-            wget https://github.com/Kitware/CMake/releases/download/v3.20.0-rc3/cmake-3.20.0-rc3-linux-aarch64.sh
-            mkdir /opt/cmake
-            sh cmake-3.20.0-rc3-linux-aarch64.sh --prefix=/opt/cmake --skip-license
-            ln -s /opt/cmake/bin/cmake /usr/bin/cmake
+            wget https://github.com/Kitware/CMake/releases/download/v3.20.0-rc3/cmake-3.20.0-rc3-linux-aarch64.sh \
+            -q -O /tmp/cmake-install.sh
+            chmod u+x /tmp/cmake-install.sh
+            mkdir /usr/bin/cmake
+            /tmp/cmake-install.sh --skip-license --prefix=/usr/bin/cmake
+            rm /tmp/cmake-install.sh
             cd /artifacts
             echo $PATH
             tools/iceoryx_build_test.sh
