--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -22,6 +22,7 @@ jobs:
           sudo apt-get install -y libacl1-dev libncurses5-dev
 
       - name: Install latest clang stable release
+        shell: bash
         run: |
           REPO_NAME="deb http://apt.llvm.org/focal/ llvm-toolchain-focal main"
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
