--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -26,9 +26,9 @@ jobs:
         run: |
           REPO_NAME="deb http://apt.llvm.org/focal/ llvm-toolchain-focal main"
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
-          add-apt-repository "${REPO_NAME}"
-          apt-get update
-          apt-get install -y clang
+          sudo add-apt-repository "${REPO_NAME}"
+          sudo apt-get update
+          sudo apt-get install -y clang
 
       - name: Checkout
         uses: actions/checkout@v2
