--- a/.github/workflows/experimental_build.yml
+++ b/.github/workflows/experimental_build.yml
@@ -25,7 +25,7 @@ jobs:
         shell: bash
         run: |
           REPO_NAME="deb http://apt.llvm.org/focal/ llvm-toolchain-focal main"
-          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
+          sudo wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
           sudo add-apt-repository "${REPO_NAME}"
           sudo apt-get update
           sudo apt-get install -y clang
