iox-#495 adapt CMake files for examples in QNX build
Signed-off-by: Dietrich Kroenke <dietrich.kroenke@apex.ai>

--- a/iceoryx_examples/icedelivery_in_c/CMakeLists.txt
+++ b/iceoryx_examples/icedelivery_in_c/CMakeLists.txt
@@ -29,7 +29,9 @@ if ( NOT ICEORYX_CXX_STANDARD )
 endif ()
 
 # compiler flag not supported on C
-list(REMOVE_ITEM ICEORYX_WARNINGS "-Wno-noexcept-type")
+if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
+    list(REMOVE_ITEM ICEORYX_WARNINGS "-Wno-noexcept-type")
+endif()
 
 add_executable(iox-c-publisher ./ice_c_publisher.c)
 set_source_files_properties(./ice_c_publisher.c PROPERTIES LANGUAGE C)
