--- a/iceoryx_examples/callbacks_in_c/CMakeLists.txt
+++ b/iceoryx_examples/callbacks_in_c/CMakeLists.txt
@@ -28,7 +28,9 @@ if ( NOT ICEORYX_CXX_STANDARD )
 endif ()
 
 # compiler flag not supported on C
-list(REMOVE_ITEM ICEORYX_WARNINGS "-Wno-noexcept-type")
+if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
+    list(REMOVE_ITEM ICEORYX_WARNINGS "-Wno-noexcept-type")
+endif()
 
 add_executable(iox-ex-c-callbacks-publisher ./ice_c_callbacks_publisher.c)
 set_source_files_properties(./ice_c_callbacks_publisher.c PROPERTIES LANGUAGE C)
