iox-#670 do not build shared libs on windows
Signed-off-by: Dietrich Krönke <dietrich.kroenke@apex.ai>

--- a/iceoryx_binding_c/CMakeLists.txt
+++ b/iceoryx_binding_c/CMakeLists.txt
@@ -29,7 +29,9 @@ find_package(iceoryx_posh REQUIRED)
 include(IceoryxPackageHelper)
 include(IceoryxPlatform)
 
-option(BUILD_SHARED_LIBS "Create shared libraries by default" ON)
+if(NOT (WIN32))
+    option(BUILD_SHARED_LIBS "Create shared libraries by default" ON)
+endif()
 
 #
 ########## set variables for export ##########
